--- a/kadry/pom.xml
+++ b/kadry/pom.xml
@@ -92,7 +92,8 @@
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>7.0.0.jre8</version>
+            <version>10.2.1.jre8</version>
+            <type>jar</type>
         </dependency>
         <!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
         <dependency>
