--- a/kadry/src/main/webapp/WEB-INF/web.xml
+++ b/kadry/src/main/webapp/WEB-INF/web.xml
@@ -113,6 +113,7 @@
             <url-pattern>/pracownik/*</url-pattern>
             <url-pattern>/pracownikdane/*</url-pattern>
             <url-pattern>/pracownikalerty/*</url-pattern>
+            <url-pattern>/pracownikaneksy/*</url-pattern>
             <url-pattern>/parametry/*</url-pattern>
             <url-pattern>/umowa/*</url-pattern>
             <url-pattern>/historia/*</url-pattern>
