--- a/kadry/pom.xml
+++ b/kadry/pom.xml
@@ -23,6 +23,13 @@
             <artifactId>itextpdf</artifactId>
             <version>5.5.13.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.googlecode.xades4j/xades4j -->
+        <dependency>
+            <groupId>com.googlecode.xades4j</groupId>
+            <artifactId>xades4j</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
