--- a/kadry/src/main/webapp/WEB-INF/web.xml
+++ b/kadry/src/main/webapp/WEB-INF/web.xml
@@ -121,6 +121,7 @@
             <url-pattern>/portalpracodawca/*</url-pattern>
             <url-pattern>/statystyka/*</url-pattern>
             <url-pattern>/wydruki/*</url-pattern>
+            <url-pattern>/wskazniki/*</url-pattern>
             <url-pattern>/pit/*</url-pattern>
             <url-pattern>/pit4/*</url-pattern>
         </web-resource-collection>
@@ -135,6 +136,7 @@
         <web-resource-collection>
             <web-resource-name>Pracownik Area</web-resource-name>
             <url-pattern>/portalpracownik/*</url-pattern>
+            <url-pattern>/wydruki/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>Pracownik</role-name>
@@ -149,6 +151,7 @@
             <url-pattern>/portalpracodawca/*</url-pattern>
             <url-pattern>/pracownikalerty/*</url-pattern>
             <url-pattern>/wydruki/*</url-pattern>
+            <url-pattern>/wskazniki/*</url-pattern>
             <url-pattern>/statystyka/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
