--- a/npkpir_23/nbproject/project.properties
+++ b/npkpir_23/nbproject/project.properties
@@ -1,7 +1,8 @@
+file.reference.activation-1.1.1.jar=D:\\library\\activation-1.1.1.jar
 file.reference.all-themes-1.0.10.jar=D:\\library\\all-themes-1.0.10.jar
 file.reference.atmosphere-runtime-2.4.14.jar=D:\\library\\atmosphere-runtime-2.4.14.jar
 file.reference.azure-keyvault-core-0.8.0.jar=D:\\library\\azure-keyvault-core-0.8.0.jar
-file.reference.azure-storage-6.1.0.jar=D:\\library\\azure-storage-6.1.0.jar
+file.reference.azure-storage-7.0.1.jar=D:\\library\\azure-storage-7.0.1.jar
 file.reference.bcpkix-jdk15on-1.58.jar=D:\\library\\bcpkix-jdk15on-1.58.jar
 file.reference.bcprov-jdk15on-1.58.jar=D:\\library\\bcprov-jdk15on-1.58.jar
 file.reference.ck-jsf-editor-0.9.4.jar=D:\\library\\ck-jsf-editor-0.9.4.jar
@@ -10,16 +11,16 @@ file.reference.commons-beanutils-1.9.4.jar=D:\\library\\commons-beanutils-1.9.4.
 file.reference.commons-codec-1.10.jar=D:\\library\\commons-codec-1.10.jar
 file.reference.commons-collections4-4.3.jar=D:\\library\\commons-collections4-4.3.jar
 file.reference.commons-compress-1.20.jar=D:\\library\\commons-compress-1.20.jar
-file.reference.commons-csv-1.8.jar=D:\\library\\commons-csv-1.8.jar
+file.reference.commons-compress-1.24.0.jar=D:\\library\\commons-compress-1.24.0.jar
+file.reference.commons-csv-1.10.0.jar=D:\\library\\commons-csv-1.10.0.jar
 file.reference.commons-fileupload-1.3.jar=D:\\library\\commons-fileupload-1.3.jar
 file.reference.commons-io-2.4.jar=D:\\library\\commons-io-2.4.jar
 file.reference.commons-lang3-3.11.jar=D:\\library\\commons-lang3-3.11.jar
 file.reference.commons-logging-1.1.1.jar=D:\\library\\commons-logging-1.1.1.jar
 file.reference.commons-math3-3.6.1.jar=D:\\library\\commons-math3-3.6.1.jar
-file.reference.commons-text-1.9.jar=D:\\library\\commons-text-1.9.jar
-file.reference.curvesapi-1.06.jar=D:\\library\\curvesapi-1.06.jar
+file.reference.commons-text-1.10.0.jar=D:\\library\\commons-text-1.10.0.jar
+file.reference.core-1.47.1.jar=D:\\library\\core-1.47.1.jar
 file.reference.eclipselink-2.7.10.jar=D:\\library\\eclipselink-2.7.10.jar
-file.reference.eclipselink.jar=D:\\library\\eclipselink.jar
 file.reference.ehcache-3.6.1.jar=D:\\library\\ehcache-3.6.1.jar
 file.reference.facestrace-1.1.0.jar=D:\\library\\facestrace-1.1.0.jar
 file.reference.fontbox-2.0.16.jar=D:\\library\\fontbox-2.0.16.jar
@@ -31,7 +32,6 @@ file.reference.jackson-core-2.9.3.jar=D:\\library\\jackson-core-2.9.3.jar
 file.reference.jakarta.faces-2.3.12.jar=D:\\library\\jakarta.faces-2.3.12.jar
 file.reference.jakarta.faces-api-3.0.0.jar=D:\\library\\jakarta.faces-api-3.0.0.jar
 file.reference.jakarta.persistence-2.2.3.jar=D:\\library\\jakarta.persistence-2.2.3.jar
-file.reference.javaee-endorsed-api-6.0.jar=D:\\library\\javaee-endorsed-api-6.0.jar
 file.reference.javax.annotation-api-1.3.2.jar=D:\\library\\javax.annotation-api-1.3.2.jar
 file.reference.javax.persistence-2.2.1.jar=D:\\library\\javax.persistence-2.2.1.jar
 file.reference.jaxb-api-2.3.0.jar=D:\\library\\jaxb-api-2.3.0.jar
@@ -80,7 +80,7 @@ build.classes.excludes=**/*.java,**/*.form
 javadoc.author=false
 j2ee.platform=1.7
 dist.war=${dist.dir}/${war.name}
-javac.target=1.8
+javac.target=11
 build.generated.dir=${build.dir}/generated
 resource.dir=setup
 build.web.excludes=${build.classes.excludes}
@@ -102,7 +102,7 @@ annotation.processing.processors.list=
 javadoc.version=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 dist.dir=dist
-javac.source=1.8
+javac.source=11
 javac.debug=true
 javac.test.processorpath=${javac.test.classpath}
 run.test.classpath=\
@@ -113,7 +113,7 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
 javadoc.notree=false
 source.root=src
 runmain.jvmargs=
-platform.active=JDK_11.0.2_open
+platform.active=default_platform
 javadoc.preview=true
 j2ee.deploy.on.save=false
 annotation.processing.enabled=true
@@ -125,8 +125,8 @@ javac.classpath=\
     ${file.reference.all-themes-1.0.10.jar}:\
     ${file.reference.atmosphere-runtime-2.4.14.jar}:\
     ${file.reference.azure-keyvault-core-0.8.0.jar}:\
-    ${file.reference.azure-storage-6.1.0.jar}:\
     ${file.reference.bcpkix-jdk15on-1.58.jar}:\
+    ${file.reference.azure-storage-7.0.1.jar}:\
     ${file.reference.bcprov-jdk15on-1.58.jar}:\
     ${file.reference.ck-jsf-editor-0.9.4.jar}:\
     ${file.reference.commonj.sdo-2.1.1.jar}:\
@@ -134,20 +134,18 @@ javac.classpath=\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.commons-collections4-4.3.jar}:\
     ${file.reference.commons-compress-1.20.jar}:\
-    ${file.reference.commons-csv-1.8.jar}:\
     ${file.reference.commons-fileupload-1.3.jar}:\
+    ${file.reference.commons-csv-1.10.0.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.commons-lang3-3.11.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-math3-3.6.1.jar}:\
-    ${file.reference.commons-text-1.9.jar}:\
-    ${file.reference.curvesapi-1.06.jar}:\
+    ${file.reference.commons-text-1.10.0.jar}:\
     ${file.reference.eclipselink-2.7.10.jar}:\
-    ${file.reference.eclipselink.jar}:\
     ${file.reference.ehcache-3.6.1.jar}:\
     ${file.reference.facestrace-1.1.0.jar}:\
     ${file.reference.fontbox-2.0.16.jar}:\
     ${file.reference.gdata-client-1.0.jar}:\
+    ${file.reference.core-1.47.1.jar}:\
     ${file.reference.gson-2.2.4.jar}:\
     ${file.reference.iText-2.1.7.jar}:\
     ${file.reference.itextpdf-5.4.0.jar}:\
@@ -155,7 +153,6 @@ javac.classpath=\
     ${file.reference.jakarta.faces-2.3.12.jar}:\
     ${file.reference.jakarta.faces-api-3.0.0.jar}:\
     ${file.reference.jakarta.persistence-2.2.3.jar}:\
-    ${file.reference.javaee-endorsed-api-6.0.jar}:\
     ${file.reference.javax.annotation-api-1.3.2.jar}:\
     ${file.reference.javax.persistence-2.2.1.jar}:\
     ${file.reference.jaxb-api-2.3.0.jar}:\
@@ -189,7 +186,10 @@ javac.classpath=\
     ${file.reference.xades4j-1.3.2.jar}:\
     ${file.reference.xalan-2.7.2.jar}:\
     ${file.reference.xml-apis-1.3.04.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.commons-lang3-3.11.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.commons-compress-1.24.0.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
@@ -215,8 +215,7 @@ javac.processorpath=\
 build.test.results.dir=${build.dir}/test/results
 display.browser=true
 javadoc.use=true
-endorsed.classpath=\
-    ${libs.javaee-endorsed-api-6.0.classpath}
+endorsed.classpath=
 javadoc.nonavbar=false
 build.web.dir=${build.dir}/web
 war.name=npkpir_23.war
