--- a/npkpir_23/nbproject/project.properties
+++ b/npkpir_23/nbproject/project.properties
@@ -113,7 +113,7 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
 javadoc.notree=false
 source.root=src
 runmain.jvmargs=
-platform.active=default_platform
+platform.active=JDK_11.0.20
 javadoc.preview=true
 j2ee.deploy.on.save=false
 annotation.processing.enabled=true
@@ -140,9 +140,9 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-math3-3.6.1.jar}:\
     ${file.reference.commons-text-1.10.0.jar}:\
-    ${file.reference.eclipselink-2.7.10.jar}:\
     ${file.reference.ehcache-3.6.1.jar}:\
     ${file.reference.facestrace-1.1.0.jar}:\
+    ${file.reference.eclipselink-2.7.10.jar}:\
     ${file.reference.fontbox-2.0.16.jar}:\
     ${file.reference.gdata-client-1.0.jar}:\
     ${file.reference.core-1.47.1.jar}:\
@@ -164,9 +164,9 @@ javac.classpath=\
     ${file.reference.jsoup-1.10.2.jar}:\
     ${file.reference.opencsv-5.3.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.org.eclipse.persistence.jpa-3.0.1.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql-2.5.2.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.modelgen_2.7.4.v20190115-ad5b7c6b2a.jar}:\
+    ${file.reference.org.eclipse.persistence.jpa-3.0.1.jar}:\
     ${file.reference.pdfbox-2.0.16.jar}:\
     ${file.reference.poi-4.1.0.jar}:\
     ${file.reference.poi-excelant-4.1.0.jar}:\
