transfer do primefaces 8.0

--- a/npkpir_23/nbproject/project.properties
+++ b/npkpir_23/nbproject/project.properties
@@ -52,7 +52,7 @@ file.reference.poi-excelant-4.1.0.jar=D:\\library\\poi-excelant-4.1.0.jar
 file.reference.poi-ooxml-4.1.0.jar=D:\\library\\poi-ooxml-4.1.0.jar
 file.reference.poi-ooxml-schemas-4.1.0.jar=D:\\library\\poi-ooxml-schemas-4.1.0.jar
 file.reference.poi-scratchpad-4.1.0.jar=D:\\library\\poi-scratchpad-4.1.0.jar
-file.reference.primefaces-7.0.jar=D:\\library\\primefaces-7.0.jar
+file.reference.primefaces-8.0.jar=D:\\library\\primefaces-8.0.jar
 file.reference.primefaces-extensions-3.0.0.jar=D:\\library\\primefaces-extensions-3.0.0.jar
 file.reference.rome-0.9.jar=D:\\library\\rome-0.9.jar
 file.reference.sam-1.0.9.jar=D:\\library\\sam-1.0.9.jar
@@ -113,7 +113,7 @@ auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
 javadoc.notree=false
 source.root=src
 runmain.jvmargs=
-platform.active=JDK_11.0.20
+platform.active=default_platform
 javadoc.preview=true
 j2ee.deploy.on.save=false
 annotation.processing.enabled=true
@@ -173,8 +173,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-4.1.0.jar}:\
     ${file.reference.poi-ooxml-schemas-4.1.0.jar}:\
     ${file.reference.poi-scratchpad-4.1.0.jar}:\
-    ${file.reference.primefaces-7.0.jar}:\
     ${file.reference.primefaces-extensions-3.0.0.jar}:\
+    ${file.reference.primefaces-8.0.jar}:\
     ${file.reference.serializer-2.7.2.jar}:\
     ${file.reference.rome-0.9.jar}:\
     ${file.reference.sam-1.0.9.jar}:\
