--- a/npkpir_23/nbproject/project.properties
+++ b/npkpir_23/nbproject/project.properties
@@ -13,7 +13,7 @@ file.reference.commons-collections4-4.3.jar=D:\\library\\commons-collections4-4.
 file.reference.commons-compress-1.20.jar=D:\\library\\commons-compress-1.20.jar
 file.reference.commons-compress-1.24.0.jar=D:\\library\\commons-compress-1.24.0.jar
 file.reference.commons-csv-1.10.0.jar=D:\\library\\commons-csv-1.10.0.jar
-file.reference.commons-fileupload-1.3.jar=D:\\library\\commons-fileupload-1.3.jar
+file.reference.commons-fileupload-1.3.3.jar=D:\\library\\commons-fileupload-1.3.3.jar
 file.reference.commons-io-2.4.jar=D:\\library\\commons-io-2.4.jar
 file.reference.commons-lang3-3.11.jar=D:\\library\\commons-lang3-3.11.jar
 file.reference.commons-logging-1.1.1.jar=D:\\library\\commons-logging-1.1.1.jar
@@ -26,6 +26,7 @@ file.reference.facestrace-1.1.0.jar=D:\\library\\facestrace-1.1.0.jar
 file.reference.fontbox-2.0.16.jar=D:\\library\\fontbox-2.0.16.jar
 file.reference.gdata-client-1.0.jar=D:\\library\\gdata-client-1.0.jar
 file.reference.gson-2.2.4.jar=D:\\library\\gson-2.2.4.jar
+file.reference.guava-28.0-jre.jar=D:\\library\\guava-28.0-jre.jar
 file.reference.iText-2.1.7.jar=D:\\library\\iText-2.1.7.jar
 file.reference.itextpdf-5.4.0.jar=D:\\library\\itextpdf-5.4.0.jar
 file.reference.jackson-core-2.9.3.jar=D:\\library\\jackson-core-2.9.3.jar
@@ -46,6 +47,7 @@ file.reference.opencsv-5.3.jar=D:\\library\\opencsv-5.3.jar
 file.reference.org.eclipse.persistence.jpa-3.0.1.jar=D:\\library\\org.eclipse.persistence.jpa-3.0.1.jar
 file.reference.org.eclipse.persistence.jpa.jpql-2.5.2.jar=D:\\library\\org.eclipse.persistence.jpa.jpql-2.5.2.jar
 file.reference.org.eclipse.persistence.jpa.modelgen_2.7.4.v20190115-ad5b7c6b2a.jar=D:\\library\\org.eclipse.persistence.jpa.modelgen_2.7.4.v20190115-ad5b7c6b2a.jar
+file.reference.owasp-java-html-sanitizer-20190503.1.jar=D:\\library\\owasp-java-html-sanitizer-20190503.1.jar
 file.reference.pdfbox-2.0.16.jar=D:\\library\\pdfbox-2.0.16.jar
 file.reference.poi-4.1.2.jar=D:\\library\\poi-4.1.2.jar
 file.reference.poi-excelant-4.1.0.jar=D:\\library\\poi-excelant-4.1.0.jar
@@ -54,7 +56,7 @@ file.reference.poi-ooxml-schemas-4.1.2.jar=D:\\library\\poi-ooxml-schemas-4.1.2.
 file.reference.poi-scratchpad-4.1.2.jar=D:\\library\\poi-scratchpad-4.1.2.jar
 file.reference.primefaces-8.0.jar=D:\\library\\primefaces-8.0.jar
 file.reference.primefaces-extensions-3.0.0.jar=D:\\library\\primefaces-extensions-3.0.0.jar
-file.reference.rome-0.9.jar=D:\\library\\rome-0.9.jar
+file.reference.rome-1.9.0.jar=D:\\library\\rome-1.9.0.jar
 file.reference.sam-1.0.9.jar=D:\\library\\sam-1.0.9.jar
 file.reference.serializer-2.7.2.jar=D:\\library\\serializer-2.7.2.jar
 file.reference.slf4j-api-1.7.7.jar=D:\\library\\slf4j-api-1.7.7.jar
@@ -134,8 +136,8 @@ javac.classpath=\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.commons-collections4-4.3.jar}:\
     ${file.reference.commons-compress-1.20.jar}:\
-    ${file.reference.commons-fileupload-1.3.jar}:\
     ${file.reference.commons-csv-1.10.0.jar}:\
+    ${file.reference.commons-fileupload-1.3.3.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-math3-3.6.1.jar}:\
@@ -176,8 +178,8 @@ javac.classpath=\
     ${file.reference.primefaces-extensions-3.0.0.jar}:\
     ${file.reference.primefaces-8.0.jar}:\
     ${file.reference.serializer-2.7.2.jar}:\
-    ${file.reference.rome-0.9.jar}:\
     ${file.reference.sam-1.0.9.jar}:\
+    ${file.reference.rome-1.9.0.jar}:\
     ${file.reference.slf4j-api-1.7.7.jar}:\
     ${file.reference.slf4j-simple-1.7.7.jar}:\
     ${file.reference.smsapi-lib-2.4.jar}:\
@@ -189,7 +191,9 @@ javac.classpath=\
     ${file.reference.xmlbeans-3.1.0.jar}:\
     ${file.reference.commons-lang3-3.11.jar}:\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.commons-compress-1.24.0.jar}
+    ${file.reference.commons-compress-1.24.0.jar}:\
+    ${file.reference.owasp-java-html-sanitizer-20190503.1.jar}:\
+    ${file.reference.guava-28.0-jre.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
