--- a/npkpir_23/nbproject/project.properties
+++ b/npkpir_23/nbproject/project.properties
@@ -54,6 +54,7 @@ file.reference.poi-ooxml-4.1.2.jar=D:\\library\\poi-ooxml-4.1.2.jar
 file.reference.poi-ooxml-schemas-4.1.2.jar=D:\\library\\poi-ooxml-schemas-4.1.2.jar
 file.reference.poi-scratchpad-4.1.2.jar=D:\\library\\poi-scratchpad-4.1.2.jar
 file.reference.primefaces-7.0.jar=D:\\library\\primefaces-8.0.jar
+file.reference.primefaces-7.0.jar-1=D:\\library\\primefaces-7.0.jar
 file.reference.primefaces-extensions-3.0.0.jar=D:\\library\\primefaces-extensions-3.0.0.jar
 file.reference.rome-1.9.0.jar=D:\\library\\rome-1.9.0.jar
 file.reference.sam-1.0.10.jar=D:\\library\\sam-1.0.10.jar
@@ -175,8 +176,8 @@ javac.classpath=\
     ${file.reference.poi-scratchpad-4.1.2.jar}:\
     ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
     ${file.reference.primefaces-extensions-3.0.0.jar}:\
-    ${file.reference.primefaces-8.0.jar}:\
     ${file.reference.serializer-2.7.2.jar}:\
+    ${file.reference.primefaces-7.0.jar-1}:\
     ${file.reference.rome-1.9.0.jar}:\
     ${file.reference.sam-1.0.10.jar}:\
     ${file.reference.slf4j-api-1.7.7.jar}:\
