--- a/npkpir_23/nbproject/project.properties
+++ b/npkpir_23/nbproject/project.properties
@@ -14,7 +14,7 @@ file.reference.commons-compress-1.20.jar=D:\\library\\commons-compress-1.20.jar
 file.reference.commons-compress-1.24.0.jar=D:\\library\\commons-compress-1.24.0.jar
 file.reference.commons-csv-1.10.0.jar=D:\\library\\commons-csv-1.10.0.jar
 file.reference.commons-fileupload-1.3.3.jar=D:\\library\\commons-fileupload-1.3.3.jar
-file.reference.commons-io-2.4.jar=D:\\library\\commons-io-2.4.jar
+file.reference.commons-io-2.9.0.jar=D:\\library\\commons-io-2.9.0.jar
 file.reference.commons-lang3-3.11.jar=D:\\library\\commons-lang3-3.11.jar
 file.reference.commons-logging-1.1.1.jar=D:\\library\\commons-logging-1.1.1.jar
 file.reference.commons-math3-3.6.1.jar=D:\\library\\commons-math3-3.6.1.jar
@@ -48,11 +48,11 @@ file.reference.org.eclipse.persistence.jpa.jpql-2.5.2.jar=D:\\library\\org.eclip
 file.reference.org.eclipse.persistence.jpa.modelgen_2.7.4.v20190115-ad5b7c6b2a.jar=D:\\library\\org.eclipse.persistence.jpa.modelgen_2.7.4.v20190115-ad5b7c6b2a.jar
 file.reference.owasp-java-html-sanitizer-20190503.1.jar=D:\\library\\owasp-java-html-sanitizer-20190503.1.jar
 file.reference.pdfbox-2.0.16.jar=D:\\library\\pdfbox-2.0.16.jar
-file.reference.poi-4.1.2.jar=D:\\library\\poi-4.1.2.jar
+file.reference.poi-4.1.0.jar=D:\\library\\poi-4.1.0.jar
 file.reference.poi-excelant-4.1.0.jar=D:\\library\\poi-excelant-4.1.0.jar
-file.reference.poi-ooxml-4.1.2.jar=D:\\library\\poi-ooxml-4.1.2.jar
-file.reference.poi-ooxml-schemas-4.1.2.jar=D:\\library\\poi-ooxml-schemas-4.1.2.jar
-file.reference.poi-scratchpad-4.1.2.jar=D:\\library\\poi-scratchpad-4.1.2.jar
+file.reference.poi-ooxml-4.1.0.jar=D:\\library\\poi-ooxml-4.1.0.jar
+file.reference.poi-ooxml-schemas-4.1.0.jar=D:\\library\\poi-ooxml-schemas-4.1.0.jar
+file.reference.poi-scratchpad-4.1.0.jar=D:\\library\\poi-scratchpad-4.1.0.jar
 file.reference.primefaces-7.0.jar=D:\\library\\primefaces-8.0.jar
 file.reference.primefaces-7.0.jar-1=D:\\library\\primefaces-7.0.jar
 file.reference.primefaces-extensions-3.0.0.jar=D:\\library\\primefaces-extensions-3.0.0.jar
@@ -138,8 +138,8 @@ javac.classpath=\
     ${file.reference.commons-compress-1.20.jar}:\
     ${file.reference.commons-csv-1.10.0.jar}:\
     ${file.reference.commons-fileupload-1.3.3.jar}:\
-    ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-io-2.9.0.jar}:\
     ${file.reference.commons-math3-3.6.1.jar}:\
     ${file.reference.commons-text-1.10.0.jar}:\
     ${file.reference.ehcache-3.6.1.jar}:\
@@ -171,11 +171,11 @@ javac.classpath=\
     ${file.reference.org.eclipse.persistence.jpa-3.0.1.jar}:\
     ${file.reference.pdfbox-2.0.16.jar}:\
     ${file.reference.poi-excelant-4.1.0.jar}:\
-    ${file.reference.poi-4.1.2.jar}:\
-    ${file.reference.poi-ooxml-4.1.2.jar}:\
-    ${file.reference.poi-scratchpad-4.1.2.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
+    ${file.reference.poi-ooxml-4.1.0.jar}:\
     ${file.reference.primefaces-extensions-3.0.0.jar}:\
+    ${file.reference.poi-4.1.0.jar}:\
+    ${file.reference.poi-scratchpad-4.1.0.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.0.jar}:\
     ${file.reference.serializer-2.7.2.jar}:\
     ${file.reference.primefaces-7.0.jar-1}:\
     ${file.reference.rome-1.9.0.jar}:\
@@ -192,8 +192,7 @@ javac.classpath=\
     ${file.reference.commons-lang3-3.11.jar}:\
     ${file.reference.activation-1.1.1.jar}:\
     ${file.reference.commons-compress-1.24.0.jar}:\
-    ${file.reference.owasp-java-html-sanitizer-20190503.1.jar}:\
-    ${file.reference.guava-28.0-jre.jar}
+    ${file.reference.owasp-java-html-sanitizer-20190503.1.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
