--- a/kadry/pom.xml
+++ b/kadry/pom.xml
@@ -62,6 +62,12 @@
             <type>jar</type>
         </dependency>-->
         <dependency>
+            <groupId>org.glassfish.metro</groupId>
+            <artifactId>webservices-rt</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>${jakartaee}</version>
