mail do podatnikow pit dodatkowa informacja od ksiegowej

--- a/npkpir_23/web/WEB-INF/web.xml
+++ b/npkpir_23/web/WEB-INF/web.xml
@@ -20,6 +20,11 @@
     <param-name>com.sun.faces.enableThreading</param-name>
     <param-value>true</param-value>
 </context-param>
+<context-param>
+    <param-name>primefaces.SECURE_HTML_SANITIZER</param-name>
+    <param-value>true</param-value>
+</context-param>
+
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class>
